--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <h2>O mnie</h2>
                 <p>
                     Nazywam się Andrzej Jurga. Jestem uczniem Technikum Komunikacji im. Hipolita Cegielskiego.
-                    Uwielbiam tworzyć a programowanie otworzyło mi drogę do wykorzystywania komputera przy poznawaniu świata.
+                    Uwielbiam tworzyć, a programowanie otworzyło mi drogę do wykorzystywania komputera przy poznawaniu świata.
                     Zaczynałem od C++, ponieważ najłatwiej było trafić na materiały do jego nauki. Cieszę się z tego wyboru gdyż, dało mi to solidne podstawy w dalszym rozwoju.  
-                    Obecnie zajmuję się głównie projektami, które sam sobie narzucę. Efekty mojej pracy nad części z nich można zobaczyć na moim GitHubie.
+                    Obecnie zajmuję się głównie projektami, które sam sobie narzucę. Efekty mojej pracy nad częścią z nich można zobaczyć na moim GitHubie.
                 </p>
             </div>
             <div id="projects">
