--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Andrzej Jurga kl. 4C</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" media="screen and (min-width: 1100px)" href="style_large.css"/>
-        <link rel="stylesheet" media="screen and (max-width: 1100px)" href="style_medium.css"/>
+        <link rel="stylesheet" media="screen and (max-width: 1100px) and (min-width: 600px)" href="style_medium.css"/>
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="style_small.css"/>
     </head>
     <body>
         <header>
@@ -75,8 +77,8 @@
                     <input type="text" name="email" placeholder="E-mail">
                     <textarea rows="5" placeholder="treść wiadomości"></textarea>
                     <div>
-                        <input type="submit" value="Wyślij">
                         <input type="reset" value="Wyczyść">
+                        <input type="submit" value="Wyślij">
                     </div>
                 </form>
             </div>
