--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div id="second" onmouseover="play('.video3')" onmouseout="pause('.video3')">
                         <video class="video3" src="./video/clip3.mp4" preload loop></video>
                         <h3>System podlewania</h3>
-                        Bada wilgotność gleby oraz dostarcza wodę rośliną
+                        Bada wilgotność gleby oraz dostarcza wodę roślinom
                     </div>
                     <div id="second" onmouseover="play('.video4')" onmouseout="pause('.video4')">
                         <video class="video4" src="./video/clip4.mp4" preload loop></video>
@@ -59,14 +59,14 @@
             <div id=technologies>
                 <h2>Technologie:</h2>
                 <div>
-                    <div><img src="./images/cpp.svg"></div>
-                    <div><img src="./images/sfml.svg"></div>
-                    <div><img src="./images/box2d.svg"></div>
-                    <div><img src="./images/react.svg"></div>
-                    <div><img src="./images/node.svg"></div>
-                    <div><img src="./images/html.png"></div>
-                    <div><img src="./images/css.svg"></div>
-                    <div><img src="./images/js.svg"></div>
+                    <div><a href="https://isocpp.org/"><img class="tech" src="./images/cpp.svg"></a></div>
+                    <div><a href="https://www.sfml-dev.org/"><img src="./images/sfml.svg"></a></div>
+                    <div><a href="https://box2d.org/about/"><img src="./images/box2d.svg"></a></div>
+                    <div><a href="https://pl.reactjs.org/"><img src="./images/react.svg"></a></div>
+                    <div><a href="https://nodejs.org/en/"><img src="./images/node.svg"></a></div>
+                    <div><a href=""><img src="./images/html.png"></a></div>
+                    <div><a href="https://www.w3.org/Style/CSS/Overview.en.html"><img src="./images/css.svg"></a></div>
+                    <div><a href="https://www.javascript.com/"><img src="./images/js.svg"></a></div>
                 </div>
             </div>
             <div id=forms>
