--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+
         <title>Andrzej Jurga kl. 4C</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Podsumowanie umiejętności i projektów Andrzeja Jurgi">
+        <meta name="keywords" content="portfolio,praca,oferty pracy,programista,junior,tworzenie stron www,strona,projektowanie stron internetowych">
         <link rel="stylesheet" media="screen and (min-width: 1100px)" href="style_large.css"/>
         <link rel="stylesheet" media="screen and (max-width: 1100px) and (min-width: 600px)" href="style_medium.css"/>
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="style_small.css"/>
